--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -76,17 +76,17 @@ span.psw {
     <img src="images/logo.png" width="50" height="50" style="border-radius: 50%;"> <h1>Login</h1>
 </div>
 <br><br>
-<form>
+<form action = "login" method="GET">
   <div class="imgcontainer">
     <img src="images/avatar.png" class="avatar">
   </div>
 
   <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" id="user" required>
+    <label for="uname"><b>email</b></label>
+    <input type="text" placeholder="Enter email" name="email" id="email" required><br><div id="emailres" style="color: red;"></div>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" id="psw" required> <br><div id="passres" style="color: red;"></div>
+    <input type="password" placeholder="Enter Password" id="pass" name = "pass" required> 
         
     <button type="submit" class="lgn" onclick="check_valid()">Login</button>
     
@@ -101,15 +101,15 @@ span.psw {
 <script>
 function check_valid(){
 
-  var pass = document.getElementById("psw").value;
-  var hasNumber = /\d/ , flag=0;
+  var email = document.getElementById("email").value;
+  var isEmail = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})$/ ;
 
-  if(hasNumber.test(pass)==false)
+  if(!email.match(isEmail))
   {
-   document.getElementById("passres").innerHTML = "*Invalid Password*"; 
-   flag=1;
+   document.getElementById("emailres").innerHTML = "re-check mail id"; 
+   
   }
-  else{flag=0;}
+ 
 
 }
 </script>
