--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,8 +24,7 @@
       section{ 
         background-image: url('images/jog.png'); 
         background-repeat: no-repeat;
-        background-position: center;
-        background-size: 40%;
+        background-size: 100%;
         padding-left: 35%;
         padding-top: 5%;
       }
@@ -37,6 +36,8 @@
         float: left;
         width: 20%;
         padding: 5%;
+        padding-right: 10%;
+        padding-bottom: 8%;
       }
 
       nav h2{
@@ -48,11 +49,13 @@
 
       .sec3{
         background-image: url("images/meet.png");
-        padding-left: 30%;
-        background-size: 110%;
+        padding-left: 25%;
+        background-size: 120%;
         float: right;
         width: 20%;
         padding: 5%;
+        padding-right: 10%;
+        padding-bottom: 10%;
       }
 
       .sec3 h2{
@@ -113,10 +116,10 @@
     document.getElementById("meet").onmouseout = function() {mouseOutmeet()};
 
     function mouseOvermain(){
-      document.getElementById("mainsec").style.backgroundSize = "50%";
+      document.getElementById("mainsec").style.backgroundSize = "110%";
     }
     function mouseOutmain(){
-      document.getElementById("mainsec").style.backgroundSize = "40%";
+      document.getElementById("mainsec").style.backgroundSize = "100%";
     }
 
     function mouseOverplan(){
