--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -17,7 +17,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 form {border: 3px solid #3c8ddd75; padding : 5%;}
 
-input[type=text], input[type=password] {
+input[type=email], input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -86,7 +86,7 @@ span.psw {
     <input type="email" placeholder="Enter Email id" name="email" required><br> <div id="emres" style="color: red;"></div>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" id="pass" required> <br><div id="passres" style="color: red;"></div>
+    <input type="password" placeholder="Enter Password" id="pass" name = "pass" required> <br><div id="passres" style="color: red;"></div>
         
     <button type="submit" class="lgn" onsubmit="check_valid()">Login</button>
     
@@ -113,7 +113,7 @@ span.psw {
       }
 
       if (pass.value == "" || hasNumber.test(pass.value)==false) {
-        document.getElementById("pass1").innerHTML = "Please enter a valid password with atleast one number";
+        document.getElementById("passres").innerHTML = "Please enter a valid password with atleast one number";
           psw.focus();
           return false;
       }
