--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -27,7 +27,7 @@ input[type=email], input[type=password] {
 }
 
 button {
-  background-color: #1E90FF;
+  background-color: #ff6933;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -43,7 +43,7 @@ button:hover {
 .cancelbtn {
   width: auto;
   padding: 10px 18px;
-  background-color: #1E90FF;
+  background-color: #ff6933;
 }
 
 .imgcontainer {
