--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -28,7 +28,7 @@ input[type=text], input[type=password], input[type=email] {
 }
 
 button {
-  background-color: #1E90FF;
+  background-color: #ff6933;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -44,7 +44,7 @@ button:hover {
 .cancelbtn {
   width: auto;
   padding: 10px 18px;
-  background-color: #1E90FF;
+  background-color: #ff6933;
 }
 
 .imgcontainer {
