small css modifications

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,15 @@
   <head>
     <title>GYM KHANA</title>
     <style>
+        
+        .my-header{
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        background-color: azure;
+        z-index: 1;
+      }
+        
       .my-header h1 { 
         display: inline;
       }
