hme page - style changes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GYM KHANA</title>
+    <title>GYMKHANA</title>
     <style>
-        
+        body{
+            overflow-x:hidden;
+        }
         .my-header{
         position: -webkit-sticky;
         position: sticky;
@@ -25,19 +27,23 @@
       #button1{
         background-color: #fd6933;
         width: 70px;
-        border-radius: 50%;
+        border-radius: 10%; 
         padding-left: 17%;
         height: 30px;
         padding-top: 5%;
+        font-weight : bold;
+        color : white;
       }
 
       #button2{
         background-color: #ff6933;
         width: 70px;
         height: 30px;
-        border-radius: 50%;
+        border-radius: 10%;
         padding-left: 25%;
         padding-top: 5%;
+        font-weight:bold;
+         color : white;
       }
 
       #button1:hover{
@@ -66,8 +72,8 @@
       .plan{
         float: left;
         width: 10%;
-        height: 20%;   
-        padding-bottom: 8%;
+       /* height: 20%; */   
+       /* padding-bottom: 8%; */
       }
 
       .plantxt{
@@ -97,7 +103,7 @@
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         align-items: center;
         width: 300px;
-        height: 500px;
+        height: 200px;
         padding-left: 45%;
         padding-right: 40%;
         padding-top: 5%;
@@ -107,7 +113,7 @@
   </head>
   <body>
     <div class="my-header">
-      <img src="images/logo.png" width="50" height="50" style="border-radius: 50%;"> <h1>GymKhana</h1>
+      <img src="images/logo.png" width="50" height="50" style="border-radius: 50%;"> <h1>Gymkhana</h1>
       <a href="signup.html" style="padding-right: 1%;"><div id="button1">Sign Up</div></a> <a href="login.html" style="padding-right: 2%;"><div id="button2">Login</div></a>
   </div>
 
