--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -106,7 +106,7 @@ span.sgnup {
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <a href="home.html"> <button type="button" class="cancelbtn">Cancel</button> </a>
+    <a href="index.html"> <button type="button" class="cancelbtn">Cancel</button> </a>
 
   </div>
 </form>
