special char check

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -136,7 +136,7 @@
 
   <div class="meet" id="meet" onclick="meet_desc()">
     <img src="images/meet.png" style="filter: blur(2px); width: 400px; height: 300px;">
-    <h2 align="center" class="meettxt">MEET NEW PEOPLE</h2>
+    <h2 align="center" class="meettxt">JOIN FOR ACTIVITIES</h2>
   </div>
 
   <div id="desc" onclick="clear_desc()"></div>
